--- a/UI/code/Login_RauMa/DashBoar/QL_SanPham.resx
+++ b/UI/code/Login_RauMa/DashBoar/QL_SanPham.resx
@@ -153,7 +153,127 @@
   <metadata name="dataGridViewTextBoxColumn6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="xem_masp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_tensp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_gia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_loai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_mota.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hinhsp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_masp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_tensp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_gia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_loai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="xem_mota.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hinhsp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Hinhsp1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Hinhsp1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="maloaisp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="tenloaisp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="maloaisp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="tenloaisp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btn_thoat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
+        IwAALiMBeKU/dgAABu5JREFUaEPdmltsG0UUhidF4iYorVRQKVJVekvTNjSJvV7b6zj22k7cSC1q1CRc
+        ygtIXASIi2gpAtT7vYUiIV5APBSKqMQDLyDxjgoCIV4oUKDiEZpbY8/a2bVdD+esvcmsfRI7auOWjPRp
+        5X/PnPmPZ3d2VjYTQsxbSHG+QIrzBVKcL5Cii82rJVayXHI9G9MirKh0sHS3wtJRlaXCGsvGfMzQQszc
+        sWJJ4fnFrUZQe8aI+T4GfjBiyqgR95lAxj7GfCNGTAXd9zHXtKcLLyzeaD6+YokR6mSZWICNR9pZKuZl
+        RsLPripeJiJtTPSuhfFXuf1QfiVI0YWcbObilmWi6mOGrn5nRP0CjNcPxkfV81nd/wgUd//NVNyiVDjY
+        n0kov5HGZ0km5r+QinRsT8WURTeuOC8Ul1BaeEw5a+i00WuBx9UzPOFvLnobXNxoKMIKAU8PFHeJMnbd
+        SKh/5v2+hIjOWXErJR5k+WQLG4mGB42EYpCGrjPpuMrziY4BsXlNhReA8itBijJXYaZKtLBCspnlezb0
+        wqJhUUbmirSumjBuspBcBx7QRwnKrwwpyhiJzjIhBoM0G7r/ImVgruG6/0I6HliT7gYfZSi/MqQok0lo
+        ZYJ3weLxBTVwo4BF5nPeHbwTYAjlV4YUZbLxINKUiQeepAYkiXqFEfEII67S5x3wPMZhPHWeAFbQJ4xE
+        sAkg/cqQosxEl8rMLv8DsMv4ixrMBZrtbBM82FoyHW6bvkDU8TzEcQ3ioV/NLwPgMd/FiWhg2UTET/qV
+        IUUZKxJckI3Ct0UM5AKM8eBG26z53nHgmG2aaw9Vm8ZY1OG8BXEYbxeJ/esoEHYyO6ykvoDyK0OKLiLR
+        RbAP/J4axAXMAo96hPXRB9Ct1MyTBwVXWwQPSQViYfAZdevkoXKkENaH78PlWZ7tytwVcN17XgwO3gPd
+        aM9lSFHGimpt1AAu4J7BmbBgBlwtZwnz+H7BPatLM9UdKM2mZ42ti1yuHFhqzmzXvAd1ReS3dLdCF9Kz
+        AynKpHXvi+QAMuVFwTpxQBTTKeg21YoGF+bRPTBT6wXvWGXPmHl0ryhmjHJEqWE/88T+UmGYjxpHpqv9
+        OehGenYgRRnYN35GJpfBS66rXRhofO/ronhlDLpKDWbQOgIFetfaR/wsN4w39+yy+xtdHXXdd+DrE+hK
+        enYgRRlYnX4mk1eChnDFgwKoAoupcZH/5itRHB8vK6U2WRj0m3F1rSATU36C7qRnB1KUgUTDlYmnxSkQ
+        76k9O4WonMHKZhe2046v91EwhXIZMpCeHUhRBhIVqhPPgF3gptIMvvWqKP59CdJUN9TxvD1jGD+rwmzy
+        kIb07ECKMkTS2iRgVfQ2C962UuS//hLSVDfU8TzGYTyZpwbQSM8OpCgDSWY9c/Zyr66D1e+gKP77D6Sp
+        bqjjefs5iMv/DZq5kYqk0+MU5lsnrFOHhchmIcUMDc5bpw7Z8eROZkaUIchAenYgRRlclejkFUwWBjuP
+        d45UFVYcHhK5c2fso6tlMhB/uFxg/TOYiSs/Qm/SswMpymR136dUchdoCDfMuEt5FwoDw3LDx4D55iuC
+        ty63j/jZ1bBAmGm7uPpXzTPQk/TsQIoyqWCovh0KYJ0+VrWlKmYzwty3G7Zca0v3Fz4m9r0BesUlC/3M
+        00cnc5HjyPRq175DsZ5a2mroNb5Je2+5SZjH9kEXqaXT8ECHwvCSC8Fyn/DbR/yMBQqeLgeW2gT0tzfZ
+        NfaW8NJ6Nb986QboQnp2IEUXh9lCIxI4Tw3iItwuODyv7MsSmwWb5rd32TPF5UsN702Is2cQdibOVgz7
+        2XGQpyp3BfDC+i1YXwjdaM9lSFFmor/5FkP3D1KDuEDTeM/AFgpfdUxcBfEypO4hu0C4R3EvCnEYb78y
+        1bmg8O7AQLa95drf54zOEKyY6r1ZXfmdGsgFGsMZdC4t3ExPZxZ1PI+XNMbjjNVRGKySvxjJwBK+tYv0
+        K0OKMld6VKRpvMe3nRqMxHltqWUWz2NcjXvMAQoTY2F/32g42DQa1ki/MqQoM9Kr2owm1dvhwXmOGrRh
+        xH1nh0PB24aCGkMovzKkKDOc9NqM9HgZj7Q3G1HPH+TAcwnMGA+HfuWdnWuGfBF22Ru1ofzKkKJMvm/r
+        JIVtD7P8ls061z31vwZdB3hYG84/e1+k8NrdLPfyQpZ7qQTlV4YUXQwMTjH4KBTZx4Yjwb6G/lbQ5dsm
+        dt/KxBHwe0iC8itBii76+6cYGGA5KG5UCzX2V56Qh4lddzBxAPzulaD8SpCiC6K4MbiZG/r7nNbo4hr5
+        y+oNLG7ufxO/CYqb/t8McWUYnlGlQvAY9w3N6t8Mc1bc/xhSnC+Q4nyBFOcHgv0HEIByPg6eO/sAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
   <data name="btn_huy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
@@ -272,60 +392,6 @@
         NFfsvxluHF3Tsaug7P9mqFpz/2eo2ChQsVGgYmPgGf8AUfgPiIBQabgAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btn_thoat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
-        IwAALiMBeKU/dgAABu5JREFUaEPdmltsG0UUhidF4iYorVRQKVJVekvTNjSJvV7b6zj22k7cSC1q1CRc
-        ygtIXASIi2gpAtT7vYUiIV5APBSKqMQDLyDxjgoCIV4oUKDiEZpbY8/a2bVdD+esvcmsfRI7auOWjPRp
-        5X/PnPmPZ3d2VjYTQsxbSHG+QIrzBVKcL5Cii82rJVayXHI9G9MirKh0sHS3wtJRlaXCGsvGfMzQQszc
-        sWJJ4fnFrUZQe8aI+T4GfjBiyqgR95lAxj7GfCNGTAXd9zHXtKcLLyzeaD6+YokR6mSZWICNR9pZKuZl
-        RsLPripeJiJtTPSuhfFXuf1QfiVI0YWcbObilmWi6mOGrn5nRP0CjNcPxkfV81nd/wgUd//NVNyiVDjY
-        n0kov5HGZ0km5r+QinRsT8WURTeuOC8Ul1BaeEw5a+i00WuBx9UzPOFvLnobXNxoKMIKAU8PFHeJMnbd
-        SKh/5v2+hIjOWXErJR5k+WQLG4mGB42EYpCGrjPpuMrziY4BsXlNhReA8itBijJXYaZKtLBCspnlezb0
-        wqJhUUbmirSumjBuspBcBx7QRwnKrwwpyhiJzjIhBoM0G7r/ImVgruG6/0I6HliT7gYfZSi/MqQok0lo
-        ZYJ3weLxBTVwo4BF5nPeHbwTYAjlV4YUZbLxINKUiQeepAYkiXqFEfEII67S5x3wPMZhPHWeAFbQJ4xE
-        sAkg/cqQosxEl8rMLv8DsMv4ixrMBZrtbBM82FoyHW6bvkDU8TzEcQ3ioV/NLwPgMd/FiWhg2UTET/qV
-        IUUZKxJckI3Ct0UM5AKM8eBG26z53nHgmG2aaw9Vm8ZY1OG8BXEYbxeJ/esoEHYyO6ykvoDyK0OKLiLR
-        RbAP/J4axAXMAo96hPXRB9Ct1MyTBwVXWwQPSQViYfAZdevkoXKkENaH78PlWZ7tytwVcN17XgwO3gPd
-        aM9lSFHGimpt1AAu4J7BmbBgBlwtZwnz+H7BPatLM9UdKM2mZ42ti1yuHFhqzmzXvAd1ReS3dLdCF9Kz
-        AynKpHXvi+QAMuVFwTpxQBTTKeg21YoGF+bRPTBT6wXvWGXPmHl0ryhmjHJEqWE/88T+UmGYjxpHpqv9
-        OehGenYgRRnYN35GJpfBS66rXRhofO/ronhlDLpKDWbQOgIFetfaR/wsN4w39+yy+xtdHXXdd+DrE+hK
-        enYgRRlYnX4mk1eChnDFgwKoAoupcZH/5itRHB8vK6U2WRj0m3F1rSATU36C7qRnB1KUgUTDlYmnxSkQ
-        76k9O4WonMHKZhe2046v91EwhXIZMpCeHUhRBhIVqhPPgF3gptIMvvWqKP59CdJUN9TxvD1jGD+rwmzy
-        kIb07ECKMkTS2iRgVfQ2C962UuS//hLSVDfU8TzGYTyZpwbQSM8OpCgDSWY9c/Zyr66D1e+gKP77D6Sp
-        bqjjefs5iMv/DZq5kYqk0+MU5lsnrFOHhchmIcUMDc5bpw7Z8eROZkaUIchAenYgRRlclejkFUwWBjuP
-        d45UFVYcHhK5c2fso6tlMhB/uFxg/TOYiSs/Qm/SswMpymR136dUchdoCDfMuEt5FwoDw3LDx4D55iuC
-        ty63j/jZ1bBAmGm7uPpXzTPQk/TsQIoyqWCovh0KYJ0+VrWlKmYzwty3G7Zca0v3Fz4m9r0BesUlC/3M
-        00cnc5HjyPRq175DsZ5a2mroNb5Je2+5SZjH9kEXqaXT8ECHwvCSC8Fyn/DbR/yMBQqeLgeW2gT0tzfZ
-        NfaW8NJ6Nb986QboQnp2IEUXh9lCIxI4Tw3iItwuODyv7MsSmwWb5rd32TPF5UsN702Is2cQdibOVgz7
-        2XGQpyp3BfDC+i1YXwjdaM9lSFFmor/5FkP3D1KDuEDTeM/AFgpfdUxcBfEypO4hu0C4R3EvCnEYb78y
-        1bmg8O7AQLa95drf54zOEKyY6r1ZXfmdGsgFGsMZdC4t3ExPZxZ1PI+XNMbjjNVRGKySvxjJwBK+tYv0
-        K0OKMld6VKRpvMe3nRqMxHltqWUWz2NcjXvMAQoTY2F/32g42DQa1ki/MqQoM9Kr2owm1dvhwXmOGrRh
-        xH1nh0PB24aCGkMovzKkKDOc9NqM9HgZj7Q3G1HPH+TAcwnMGA+HfuWdnWuGfBF22Ru1ofzKkKJMvm/r
-        JIVtD7P8ls061z31vwZdB3hYG84/e1+k8NrdLPfyQpZ7qQTlV4YUXQwMTjH4KBTZx4Yjwb6G/lbQ5dsm
-        dt/KxBHwe0iC8itBii76+6cYGGA5KG5UCzX2V56Qh4lddzBxAPzulaD8SpCiC6K4MbiZG/r7nNbo4hr5
-        y+oNLG7ufxO/CYqb/t8McWUYnlGlQvAY9w3N6t8Mc1bc/xhSnC+Q4nyBFOcHgv0HEIByPg6eO/sAAAAA
-        SUVORK5CYII=
-</value>
-  </data>
-  <metadata name="xem_masp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_tensp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_gia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_loai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_mota.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hinhsp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="btn_xoa_nhaplai.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
@@ -463,42 +529,6 @@
         Q2MAy0/c+ChG8ZjGYAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn11.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn11.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="dataGridViewTextBoxColumn12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <data name="btn_loaisp_them.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAu
@@ -663,34 +693,4 @@
         Q2MAy0/c+ChG8ZjGYAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <metadata name="maloaisp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="tenloaisp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="maloaisp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="tenloaisp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_masp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_tensp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_gia.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_loai.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="xem_mota.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hinhsp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
 </root>
